--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 
 .name {
+    top: 0;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: bisque;
@@ -11,7 +12,7 @@
 
 .container {
     display: grid;
-    width: auto;
+    width: 100%;
     height: 500px;
     place-items: center;
     overflow: hidden;
