--- a/style.css
+++ b/style.css
@@ -208,6 +208,10 @@ button {
         font-size: 35px;
     }
 
+    button {
+        display: none;
+    }
+
     .social {
         margin: auto;
     }
