--- a/style.css
+++ b/style.css
@@ -213,6 +213,9 @@ button {
     }
 
     .social {
+        align-items: center;
+        justify-content: center;
+        display: flex;
         margin: auto;
     }
 
