--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ button {
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            z-index: 9999;
         }
 
         #overlay-content {
