--- a/style.css
+++ b/style.css
@@ -36,7 +36,11 @@ nav ul li a {
     font-size: 18px;
 }
 
-.name, .navbar, p, button, .container {
+.name,
+.navbar,
+p,
+button,
+.container {
     z-index: 999;
     position: relative;
 }
@@ -85,14 +89,14 @@ button {
 .hero-rotate {
     position: relative;
     top: -7px;
-    left:-7px;
+    left: -7px;
     width: 100%;
     height: 100%;
     border-radius: 100%;
     animation: rotate 30s linear infinite;
 }
 
-.social img{
+.social img {
     filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg);
 }
 
@@ -111,7 +115,7 @@ button {
     border: 5px solid white;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
     border-radius: 50%;
-    animation: scale 1s linear infinite alternate; 
+    animation: scale 1s linear infinite alternate;
 }
 
 .social:nth-child(1) {
@@ -130,60 +134,94 @@ button {
 }
 
 .social:nth-child(4) {
-    left: calc(var(--circleDiameter)/ 2 - var(--planets) / 2 );
+    left: calc(var(--circleDiameter)/ 2 - var(--planets) / 2);
     bottom: calc(-1 * var(--planets) / 2);
 }
 
-        /* Styling for the overlay screen */
-        #overlay {
-            display: none;
-            width: 70%;
-            height: 70%;
-            background: rgba(0, 0, 0, 0.8); /* 60% opacity black background */
-            z-index: 999;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 9999;
-        }
+/* Styling for the overlay screen */
+#overlay-me {
+    display: none;
+    width: 70%;
+    height: 70%;
+    background: rgba(0, 0, 0, 0.8);
+    /* 60% opacity black background */
+    z-index: 999;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+}
 
-        #overlay-content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
+#overlay-cv {
+    display: none;
+    width: 70%;
+    height: 90%;
+    background: rgba(0, 0, 0, 0.8);
+    /* 60% opacity black background */
+    z-index: 999;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+}
 
-        /* Styling for the close button */
-        #close-button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-            margin: 25px; /* Added margin */
-            padding: 5px 10px;
-            border: 2px solid #ff0000; /* Red border */
-        }
-        
-        .paragraphs {
-            all: initial;
-            font-size: 20px;
-        }
-        
-        .greet {
-            all: initial;
-            font-weight: bold;
-            font-size: 30px;
-        }
+#overlay-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* Styling for the close button */
+#close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    margin: 25px;
+    /* Added margin */
+    padding: 5px 10px;
+    border: 2px solid #ff0000;
+    /* Red border */
+}
+
+#close-button-cv {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    cursor: pointer;
+    margin: 25px;
+    /* Added margin */
+    padding: 5px 10px;
+    border: 2px solid #ff0000;
+    /* Red border */
+    z-index: 99999;
+}
+
+.paragraphs {
+    all: initial;
+    font-size: 20px;
+}
+
+.greet {
+    all: initial;
+    font-weight: bold;
+    font-size: 30px;
+}
 
 @keyframes rotate {
     0% {
         transform: rotate(0)
     }
+
     100% {
         transform: rotate(360deg);
     }
@@ -224,7 +262,7 @@ button {
         font-size: 60px;
     }
 
-    .social img{
+    .social img {
         height: 90px;
         width: 90px;
     }
@@ -234,7 +272,7 @@ button {
         height: 88%;
         align-items: center;
     }
-    
+
     .col {
         flex-basis: 50%;
     }
@@ -242,7 +280,7 @@ button {
     .dropbtn {
         display: none;
     }
-    
+
 }
 
 /* For mobile mode, display social icons vertically */
@@ -250,6 +288,7 @@ button {
     .container {
         --circleDiameter: 200px;
     }
+
     nav {
         text-align: center;
     }
@@ -269,17 +308,17 @@ button {
         margin: auto;
     }
 
-    .social img{
+    .social img {
         height: 70px;
         width: 70px;
     }
-      
-      /* Links inside the dropdown */
-      ul li {
+
+    /* Links inside the dropdown */
+    ul li {
         color: black;
         padding: 10px 16px;
         text-decoration: none;
         display: block;
-      }
-      
+    }
+
 }
