--- a/styles/mobile-styles.css
+++ b/styles/mobile-styles.css
@@ -20,10 +20,11 @@
         z-index: 0;
         max-height: 90vh;
         padding: 10px;
+        margin-top: 10px;
     }
 
     .paragraphs {
-        font-size: 10px;
+        font-size: 15px;
     }
 
     .greet {
