--- a/styles/desktop-styles.css
+++ b/styles/desktop-styles.css
@@ -23,6 +23,10 @@
         width: 90px;
     }
 
+    #topic1, #topic2 {
+        display: none;
+    }
+
     #resume {
         --b: 0.1em;
         /* the thickness of the line */
