modified:   styles/mobile-styles.css

--- a/styles/mobile-styles.css
+++ b/styles/mobile-styles.css
@@ -27,7 +27,7 @@
     #topic1, #topic2 {
         text-align: left;
         margin: 5%;
-        font-family: 'Pacifico', cursive;
+        font-family: cursive;
     }  
 
     .paragraphs, .greet {
