--- a/styles/mobile-styles.css
+++ b/styles/mobile-styles.css
@@ -31,6 +31,7 @@
 
     .paragraphs, .greet {
         font-family: "Helvetica Neue", Arial, sans-serif;
+        color: #fff;
     }
 
     .paragraphs {
