--- a/styles/desktop-styles.css
+++ b/styles/desktop-styles.css
@@ -54,6 +54,7 @@
 
     .row {
         display: flex;
+        justify-content: space-between;
         height: 88%;
         align-items: center;
     }
