--- a/styles/desktop-styles.css
+++ b/styles/desktop-styles.css
@@ -30,14 +30,13 @@
     #resume {
         --b: 0.1em;
         /* the thickness of the line */
-        --c: #CF9FFF;
+        --c: #986868;
         /* the color */
 
         color: #0000;
         padding-block: var(--b);
         background:
-            linear-gradient(var(--c) 50%, #fff 0) 0% calc(100% - var(--_p, 0%))/100% 200%,
-            linear-gradient(var(--c) 0 0) 0% var(--_p, 0%)/var(--_p, 0%) var(--b) no-repeat;
+            linear-gradient(var(--c) 50%, #fff 0) 0% calc(100% - var(--_p, 0%))/100% 200%;
         -webkit-background-clip: text, padding-box;
         background-clip: text, padding-box;
         transition: .3s var(--_s, 0s) linear, background-size .3s calc(.3s - var(--_s, 0s));
